plugins {
    id 'net.fabricmc.fabric-loom' version '1.17.20'
    id 'maven-publish'
}

version = "${project.mod_version}+mc${project.minecraft_version}"
group = project.maven_group
base { archivesName = project.archives_base_name }

repositories {
    mavenCentral()
    maven { url 'https://maven.shedaniel.me' }
    maven { url 'https://maven.blamejared.com' }
    maven { url 'https://raw.githubusercontent.com/Fuzss/modresources/main/maven/' }
}

// The matching ChemLib port must be built first, or supplied with -Pchemlib_jar=/path/to/ChemLib.jar.
def chemLibJar = file(providers.gradleProperty('chemlib_jar').getOrElse('../ChemLib-Fabric/build/libs/ChemLib-1.0.2+mc26.2.jar'))
if (!chemLibJar.exists()) {
    throw new GradleException("Build ChemLib for Minecraft 26.2 first, or set -Pchemlib_jar=/path/to/ChemLib.jar")
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    implementation "net.fabricmc:fabric-loader:${project.loader_version}"
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
    implementation files(chemLibJar)
    compileOnly "dev.architectury:architectury-fabric:21.0.2"
    compileOnly "me.shedaniel.cloth:cloth-config-fabric:26.2.155"
    compileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}"
    runtimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
    include implementation('teamreborn:energy:5.0.0')
    include implementation('fuzs.forgeconfigapiport:forgeconfigapiport-fabric:26.2.1')
}

processResources {
    inputs.property 'version', project.version
    filesMatching('fabric.mod.json') { expand 'version': project.version }
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(25)
    withSourcesJar()
}

tasks.withType(JavaCompile).configureEach {
    options.release = 25
    options.compilerArgs += ['-Xmaxerrs', '1000']
}

publishing {
    publications {
        mavenJava(MavenPublication) { from components.java }
    }
}

fabricApi {
    configureTests {
        createSourceSet = true
        modId = 'alchemistry-test'
        enableGameTests = true
        enableClientGameTests = true
    }
}
